--- a/style.css
+++ b/style.css
@@ -18,3 +18,37 @@ body{
 textarea:focus, input:focus{
     outline: none;
 }
+.translation{
+    position: relative;
+    top:-20px;
+}
+
+
+@keyframes example {
+    0%   {background-color: rgba(255, 255, 255, 0);color: rgba(0,0,0,0);}
+    100% {background-color: rgba(255, 255, 255, 0.8);color: rgba(0,0,0,0.8);}
+  }
+
+.hoverable {
+    position: relative;
+    text-align: center;
+  }
+  
+  .hoverable>.hoverable__tooltip {
+    display: none;
+    animation-duration: 4s;
+  }
+  
+  .hoverable:hover>.hoverable__tooltip {
+    display: inline;
+    position: absolute;
+    top:0px;
+    left:0px;
+    margin:5%;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: rgba(0,0,0,0.8);
+    border: 1px solid black;
+    border-radius: 30px;
+    animation-name: example;
+    animation-duration: 1s;
+  }
