Changed background color once again

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ p{
     font-family: 'Courier New', Courier, monospace
 }
 body{
-    background-color: #31272c;
+    background-color: #63515a;
     position: relative;
 
 }
