clearer text color

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 p{
     font-size: 200%;
     text-align: center;
-    color: #3C2C3E;
+    color: #241b25;
     margin: 5%;
     font-family: 'Courier New', Courier, monospace
 }
