--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ color: #2f2d30;
 font-family: 'Courier New', Courier, monospace;
 font-style: italic;
 }
+.difContainer{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 footer{
 align-self: flex-end;
 background-color: #06004713;
@@ -93,8 +100,8 @@ background-color: transparent;
   align-items: center;
   font-size: 200%;
   text-align: center;
-  height: 100px;
-  width: 300px;
+  height: 50px;
+  width: 150px;
   color: #3C2C3E;
   margin: 5%;
   font-family: 'Courier New', Courier, monospace;
