Added cursor blink animation

--- a/style.css
+++ b/style.css
@@ -138,5 +138,11 @@ background: #361a28;
 cursor: pointer;
 }
 .cursor{
-color:purple;
+  color:white;
+  animation: blink 1s linear infinite;
+}
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
 }
